[project]
name = "dbts"
version = "0.2.0"
description = "dbt environment runner with Snowflake zero-copy clone sandboxes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["dbt", "snowflake", "clone", "sandbox", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "snowflake-connector-python[secure-local-storage]>=3.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Repository = "https://github.com/luiul/dbts"
Issues = "https://github.com/luiul/dbts/issues"

[project.scripts]
dbts = "dbts.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbts"]

[dependency-groups]
dev = ["ruff>=0.6", "ty"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ty.src]
include = ["src/dbts"]
